# LocalTranslator

./: .gitignore  README.md  README_EN.md  build.spec  download_models.py  installer.nsi  main.py  pyproject.toml  test_model.py
translator/: __init__.py  config.py  text_formatter.py  themes.py  translation_thread.py  translator_app.py
